--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <div class="search">
             <input type="text" id="search" placeholder="Search">
         </div>
-        <h1 id="xxx"></h1>
+        <h1 id="xxx1"></h1>
+        <h1 id="xxx2"></h1>
+        <h1 id="xxx3"></h1>
         <div class="list">
         </div>
     </div>
