--- a/aboutblank.html
+++ b/aboutblank.html
@@ -5,7 +5,7 @@
     const x = document.getElementById('x');
 
     x.addEventListener('click', function(){
-        const url = `https://newfies.github.io/ProjectNoMoCensStation/index.html`;
+        const url = `index.html`;
         
         // Open a blank window
         const win = window.open('about:blank', '_blank');
